# snack

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
resources/: main.ui  member_row.ui  resources.gresource.xml
src/: app.rs  main.rs  message.rs  server.rs  subscription.rs  update.rs  view.rs
src/room/: chat.rs  message.rs  mod.rs  user.rs
src/storage/: mod.rs
src/ui/: account.rs  chat.rs  join.rs  members.rs  mod.rs  sidebar.rs  style.rs
src/window/: imp.rs  mod.rs
src/window/member_object/: imp.rs  mod.rs
src/window/member_row/: imp.rs  mod.rs
src/xmpp/: mod.rs
