[package]
name = "snack"
version = "0.1.6"
edition = "2024"

[dependencies]
libxmpp = "0.1.3"
iced = "0.14.0"
tokio = { version = "1.52.3", features = ["full"] }
chrono = "0.4.44"
log = "0.4.29"
env_logger = "0.11.10"
open = "5"
keyring-core = "1"
directories = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify-rust = "4"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = ["rt-async-io-crypto-rust"] }
