[package]
name = "snack"
version = "0.1.9"
edition = "2024"

[dependencies]
libxmpp = "0.2.4"
iced = { version = "0.14.0", features = ["tokio"] }
tokio = { version = "1.52.3", features = ["full"] }
chrono = "0.4.45"
log = "0.4.33"
env_logger = "0.11.11"
open = "5.3.6"
keyring-core = "1.0.0"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
notify-rust = "4.18.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = ["rt-async-io-crypto-rust"] }
